# ttt

./: Makefile  README.md
src/: Main.re  Update.re  Update.rei  View.re  dune
src/model/: Board.re  Grid.re  Grid.rei  Model.re  Model.rei  Player.re  Triple.re  Triple.rei
src/update/: Update.re  Update.rei
src/view/: Grid.re  GridLines.re  PlayerMark.re  Square.re  View.re  WinnerLine.re
src/www/: index.html  style.css
