(include_subdirs unqualified)

(alias
 (name default)
 (deps
  (glob_files www/*)))

(executable
 (name main)
 (libraries incr_dom)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps js_of_ocaml-ppx ppx_let ppx_sexp_conv)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
